@@ -25,5 +25,27 @@ public class DocumentUtils {
 		
 		return tags [last_index];
 	}
+	
+	
+	public static int AddString (TextBuffer buffer, int offset, string data, string suffix)
+	{
+		TextIter insertAt = buffer.GetIterAtOffset (offset);
+		DocumentTagTable tagTable = (DocumentTagTable) buffer.TagTable;
+		TextTag tag = tagTable.Lookup ("format" + suffix);
+		
+		if (tag == null)
+			tag = tagTable.CreateDynamicTag ("format" + suffix);
+		buffer.InsertWithTags (ref insertAt, data, tag);
+		
+		return insertAt.Offset;
+	}
+	
+	public static int AddNewLine (TextBuffer buffer, int offset, string suffix)
+	{
+		TextIter insertAt = buffer.GetIterAtOffset (offset);
+		// AddNewLine (buffer, ref insertAt, suffix);
+		
+		return insertAt.Offset;
+	}
 }
 }
